--- a/cite.bib
+++ b/cite.bib
@@ -36,6 +36,22 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian and {Kuijken}, Konrad and
  year = {1992}
 }
 
+@article{1997A&A...322....1B,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/1997A&A...322....1B},
+ archiveprefix = {arXiv},
+ author = {{Bernardeau}, F. and {van Waerbeke}, L. and {Mellier}, Y.},
+ eprint = {astro-ph/9609122},
+ journal = {\aap},
+ keywords = {COSMOLOGY: DARK MATTER, LARGE-SCALE STRUCTURES, GRAVITATIONAL LENSING, Astrophysics},
+ month = {Jun},
+ pages = {1-18},
+ primaryclass = {astro-ph},
+ title = {{Weak lensing statistics as a probe of \{OMEGA\} and power spectrum.}},
+ volume = {322},
+ year = {1997}
+}
+
 @article{2001PhR...340..291B,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2001PhR...340..291B},
